[package]
name = "octofhir-fhir-model"
version = "0.1.1"
edition = "2024"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Core FHIR model abstractions and ModelProvider trait for FHIRPath type-aware evaluation"
readme = "README.md"
repository = "https://github.com/octofhir/fhir-model-rs"
keywords = ["fhir", "healthcare", "model", "types", "fhirpath"]
categories = ["data-structures", "api-bindings", "science"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"  # Always available for validation

# Error handling
thiserror = "2.0"

# Async support (always enabled)
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "rt", "macros"] }

# Collections and utilities
indexmap = "2.0"
smallvec = { version = "1.11", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "octofhir_fhir_model"
path = "src/lib.rs"
