[package]
name = "octofhir-fhir-model"
version = "0.1.8"
edition = "2024"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Core FHIR model abstractions, ModelProvider trait, and FhirPathEvaluator"
readme = "README.md"
repository = "https://github.com/octofhir/fhir-model-rs"
keywords = ["fhir", "healthcare", "model", "types", "fhirpath"]
categories = ["data-structures", "api-bindings", "science"]

[features]
default = ["serde"]
serde = ["dep:serde"]
http-client = ["dep:reqwest"]
caching = ["dep:moka"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Async support
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }

# Collections and utilities
indexmap = "2"
smallvec = { version = "1.11", features = ["serde"] }
papaya = "0.2"

# Decimal precision for FHIRPath values
rust_decimal = { version = "1.40", features = ["serde"] }

# HTTP client (optional)
reqwest = { version = "0.13.1", features = [
    "json",
    "gzip",
    "rustls",
], optional = true }

# Caching (optional)
moka = { version = "0.12", features = ["future"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "octofhir_fhir_model"
path = "src/lib.rs"
